--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('header') %>
 
 <form method="GET" action="/cotacao">
-    <input name="cotacao" type="text" placeholder="Cotação Dolar">
+    <input name="cotacao" type="text" placeholder="Cotação Dolar" value="<%= cotacao %>">
     <input name="quantidade" type="text" placeholder="Quantidade $$">
     <button>Converter</button>
 </form>
